--- a/wikiscan.css
+++ b/wikiscan.css
@@ -119,9 +119,11 @@ background-image: linear-gradient(to right, #ffffff, #cacaca, #979797, #676767, 
     letter-spacing:0.04em;
     font-weight:bold;
     padding:5px 0px 3px 8px;
-    height:38px;
     white-space:nowrap;
     text-align:center;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .menu_item{
     display:inline-block;
@@ -267,9 +269,50 @@ background-image: linear-gradient(to right, #ffffff, #cacaca, #979797, #676767, 
 
 }
 
-.list_mep{
-    margin:3px;
+.list_mep_live{
+    margin:3px auto;
     padding:0px;
+}
+@media (min-width: 1024px) {
+	.list_mep_live{
+	    display:grid;
+	    grid-template-columns: 1fr 510px;
+	    align-items: start;
+	}
+    .list_mep_live .date_title {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .list_mep_live .live_menu {
+        grid-column: 1;
+        grid-row: 2;
+    }
+    .list_mep_live .list {
+        grid-column: 1;
+        grid-row: 3;
+    }
+    .list_mep_live .graphs_toplist {
+        grid-column: 2;
+        grid-row: 1/4;
+    }
+
+	.list_mep_dates{
+	    display:grid;
+	    grid-template-columns: 1fr 510px;
+	    align-items: start;
+	}
+    .list_mep_dates .list_calendar {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .list_mep_dates .list {
+        grid-column: 1;
+        grid-row: 2;
+    }
+    .list_mep_dates .graphs_toplist {
+        grid-column: 2;
+        grid-row: 1/3;
+    }
 }
 .list_mep td{
     vertical-align:top;
@@ -322,6 +365,17 @@ background-image: linear-gradient(to right, #ffffff, #cacaca, #979797, #676767, 
     font-size:90%;
 }
 
+@media (min-width: 721px) {
+	.grid_cont {
+		display:flex;
+	}
+	.grid_cont .mep {
+		flex: 1;
+	}
+	.grid_cont .mep.mep_users {
+		flex: 0 320px;
+	}
+}
 
 .dates_menu{
     width:100%;
@@ -329,13 +383,17 @@ background-image: linear-gradient(to right, #ffffff, #cacaca, #979797, #676767, 
     border-collapse:collapse;
     margin:1px 0px;
     color:#aaa;
+    display:flex;
+    max-width: 100vw;
+    overflow:auto;
 }
-.dates_menu td{
+.dates_menu >div{
     border:#d5d5d5 1px solid;
     padding:2px;
     text-align:center;
+    flex:1;
 }
-.dates_menu td.sel{
+.dates_menu >.sel{
     font-weight:bold;
     background-color:#fff;
 }
@@ -428,10 +486,15 @@ background-image: linear-gradient(to right, #ffffff, #cacaca, #979797, #676767, 
 
 
 .graphs_toplist{
+	display:flex;
+	flex-wrap:wrap;
+}
+.graphs_toplist a{
+    margin:5px;
+	flex: 1 1 auto;
 }
 .graphs_toplist img{
-    margin:5px;
-    text-align:left;
+    max-width: 100%;
 }
 
 .ns_charts{
@@ -472,37 +535,37 @@ fill: steelblue;
 .list{
     margin:2px 0 0 0;
     padding:3px;
-    width:630px; /* LARGEUR */
+    /*width:630px; /* LARGEUR */
     border:#c8c8c8 1px solid;
     font-size:96%;
 }
 .list_menu{
-    padding:5px 2px 5px 2px;
     margin-bottom:5px;
-    width:100%;
-    text-align:center;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:center;
 }
-.list_menu_item,.list_menu_item_sel{
-    display:inline;
+.list_menu_item{
     padding:3px 8px;
-    margin:1.5em;
+    margin:5px 1.5em;
     font-size:115%;
     letter-spacing:0.04em;
     background-color:#fff;
     border:#c6c6c6 1px solid;
 }
-.list_menu_item_sel{
+.list_menu_item.sel{
     font-weight:bold;
-    margin:1.2em;
     background-color:#d9d9d9;
 }
 .dates_span{
     float:right;
 }
-
+.wrap_max_fullwidth {
+	max-width:96vw;
+	max-width:calc(100vw - 8px);
+	overflow:auto;
+}
 .list_menu_item a,.list_menu_item a:visited{color:#000}
-.list_menu_item_sel a,.list_menu_item_sel a:visited{color:#000}
-
 
 .list_contents{
 }
@@ -567,10 +630,17 @@ fill: steelblue;
     display:none;
 }
 
-.list_stats{
-    margin:0 auto;
+@media (min-width: 721px) {
+	.list_stats{
+	    display:flex;
+	}
+	.list_stats .mep{
+		flex:1;
+	}
 }
-.list_stats td.mep{
+
+.list_stats .mep{
+	flex:1;
     padding:5px;
     vertical-align:top;
 }
@@ -585,6 +655,7 @@ fill: steelblue;
     border:#ccc 1px solid;
     background-color:#ffffff;
     margin:0 auto;
+    width: 100%;
     padding:5px;
     font-size:90%;
 }
@@ -644,21 +715,24 @@ fill: steelblue;
 
 .userstats_date_filter{
     margin:2px 5px;
-    border-collapse:collapse;
+    display:flex;
+    max-width: 100vw;
+    overflow: auto;
 }
-.userstats_date_filter td{
+.userstats_date_filter > div{
     border:#ccc 1px solid;
     padding:2px 6px;
     text-align:center;
     font-size:110%;
+    flex:1;
 }
-.userstats_date_filter .years td{
+.userstats_date_filter.years > div{
     font-weight:bold;
 }
-.userstats_date_filter td a{
+.userstats_date_filter a{
     color:#183950;
 }
-.userstats_date_filter td.selected{
+.userstats_date_filter .selected{
     background-color:#fff;
 }
 
@@ -1291,7 +1365,7 @@ table.sortable thead tr .headerSortDown, table.sortable thead tr .headerSortUp {
 .about{
     padding: 1em;
 }
-.about h1, .about h2,{
+.about h1, .about h2{
     margin:0.3em 0.1em 0.3em 0.3em;
 }
 .about h2{
